syntax = "proto3";
package dreanity.saturn.giveaway;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "giveaway/params.proto";
import "giveaway/giveaway.proto";
import "giveaway/giveaway_count.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/dreanity/saturn/x/giveaway/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/dreanity/saturn/giveaway/params";
  }
  // Queries a Giveaway by index.
	rpc Giveaway(QueryGetGiveawayRequest) returns (QueryGetGiveawayResponse) {
		option (google.api.http).get = "/dreanity/saturn/giveaway/giveaway/{index}";
	}

	// Queries a list of Giveaway items.
	rpc GiveawayAll(QueryAllGiveawayRequest) returns (QueryAllGiveawayResponse) {
		option (google.api.http).get = "/dreanity/saturn/giveaway/giveaway";
	}

// Queries a GiveawayCount by index.
	rpc GiveawayCount(QueryGetGiveawayCountRequest) returns (QueryGetGiveawayCountResponse) {
		option (google.api.http).get = "/dreanity/saturn/giveaway/giveaway_count";
	}
// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetGiveawayRequest {
	  uint64 index = 1;

}

message QueryGetGiveawayResponse {
	Giveaway giveaway = 1 [(gogoproto.nullable) = false];
}

message QueryAllGiveawayRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllGiveawayResponse {
	repeated Giveaway giveaway = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetGiveawayCountRequest {}

message QueryGetGiveawayCountResponse {
	GiveawayCount GiveawayCount = 1 [(gogoproto.nullable) = false];
}
// this line is used by starport scaffolding # 3
